Too long title overflow fixed

--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -35,4 +35,5 @@ mat-toolbar-row{
 
 .title{
   overflow: hidden;
+  text-overflow: ellipsis;
 }
